--- a/project.config
+++ b/project.config
@@ -11,4 +11,5 @@
 	label-Ok-To-Test = +0..+1 group user/Cyril Bur (cyrilbur-ibm)
 	label-Verified = -1..+1 group user/Andrew Jeffery (amboar)
 	label-Verified = -1..+1 group user/Cyril Bur (cyrilbur-ibm)
+[access "refs/tags/*"]
 	pushSignedTag = group user/Andrew Jeffery (amboar)
