test: Move related tests to vpnor directory
Change-Id: I5fe7f625ad642cef17fe53bd244dcde8fd99f3ad
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,9 @@ mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
 @CODE_COVERAGE_RULES@
 
+check_PROGRAMS =
+
 include test/Makefile.am.include
+include test/vpnor/Makefile.am.include
 
 TESTS = $(check_PROGRAMS)
