--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -102,77 +102,31 @@ test_sequence_numbers_SOURCES = %reldir%/sequence_numbers.c \
 test_get_mbox_info_v2_timeout_SOURCES = %reldir%/get_mbox_info_v2_timeout.c \
 					$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
-TEST_MBOX_VPNOR_SRCS = common.c pnor_partition_table.cpp
-
-test_create_pnor_partition_table_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
-	%reldir%/create_pnor_partition_table.cpp
-test_create_pnor_partition_table_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
-test_create_pnor_partition_table_LDADD = -lstdc++fs \
-	$(SDBUSPLUS_LIBS) \
-	$(PHOSPHOR_LOGGING_LIBS) \
-	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
-
-test_create_read_window_vpnor_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
-	mboxd_msg.c \
-	mboxd_windows.c \
-	mboxd_lpc.c \
-	mboxd_lpc_virtual.cpp \
-	mboxd_pnor_partition_table.cpp \
-	mboxd_flash_virtual.cpp \
-	pnor_partition.cpp \
-	%reldir%/create_read_window_vpnor.cpp
-test_create_read_window_vpnor_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
-test_create_read_window_vpnor_LDADD = -lstdc++fs \
-	$(SDBUSPLUS_LIBS) \
-	$(PHOSPHOR_LOGGING_LIBS) \
-	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
-
-test_write_flash_vpnor_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
-	mboxd_pnor_partition_table.cpp \
-	mboxd_flash_virtual.cpp \
-	mtd.c \
-	pnor_partition.cpp \
-	%reldir%/write_flash_vpnor.cpp
-test_write_flash_vpnor_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
-test_write_flash_vpnor_LDADD = -lstdc++fs \
-	$(SDBUSPLUS_LIBS) \
-	$(PHOSPHOR_LOGGING_LIBS) \
-	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
-
-check_PROGRAMS = %reldir%/sanity \
-		 %reldir%/copy_flash \
-		 %reldir%/erase_flash \
-		 %reldir%/write_flash \
-		 %reldir%/get_mbox_info_v2 \
-		 %reldir%/reset_state \
-		 %reldir%/get_flash_info_v2 \
-		 %reldir%/create_read_window_v2 \
-		 %reldir%/create_write_window_v2 \
-		 %reldir%/close_window_v2 \
-		 %reldir%/mark_write_dirty_v2 \
-		 %reldir%/write_flush_v2 \
-		 %reldir%/mark_write_erased_v2 \
-		 %reldir%/bmc_event_ack_v2 \
-		 %reldir%/create_oversize_window \
-		 %reldir%/create_zero_size_window \
-		 %reldir%/implicit_flush \
-		 %reldir%/request_high_version \
-		 %reldir%/request_low_version \
-		 %reldir%/mark_read_dirty \
-		 %reldir%/read_window_write_flush \
-		 %reldir%/read_window_mark_write_erased \
-		 %reldir%/write_window_dirty_erase \
-		 %reldir%/invalid_command \
-		 %reldir%/read_window_cycle \
-		 %reldir%/sequence_numbers \
-		 %reldir%/get_mbox_info_v2_timeout
-
-if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
-	%reldir%/create_pnor_partition_table \
-	%reldir%/create_read_window_vpnor \
-	%reldir%/write_flash_vpnor
-endif
+		%reldir%/sanity \
+		%reldir%/copy_flash \
+		%reldir%/erase_flash \
+		%reldir%/write_flash \
+		%reldir%/get_mbox_info_v2 \
+		%reldir%/reset_state \
+		%reldir%/get_flash_info_v2 \
+		%reldir%/create_read_window_v2 \
+		%reldir%/create_write_window_v2 \
+		%reldir%/close_window_v2 \
+		%reldir%/mark_write_dirty_v2 \
+		%reldir%/write_flush_v2 \
+		%reldir%/mark_write_erased_v2 \
+		%reldir%/bmc_event_ack_v2 \
+		%reldir%/create_oversize_window \
+		%reldir%/create_zero_size_window \
+		%reldir%/implicit_flush \
+		%reldir%/request_high_version \
+		%reldir%/request_low_version \
+		%reldir%/mark_read_dirty \
+		%reldir%/read_window_write_flush \
+		%reldir%/read_window_mark_write_erased \
+		%reldir%/write_window_dirty_erase \
+		%reldir%/invalid_command \
+		%reldir%/read_window_cycle \
+		%reldir%/sequence_numbers \
+		%reldir%/get_mbox_info_v2_timeout
