test: tmpd: Replace createVpnorRoot() with VpnorRoot class
The VpnorRoot class prepares a temporary directory for use as a VPNOR
backing store. Implementing it as a class allows us to use RAII to get
it to clean up after itself.

Change-Id: Ia5a839e751f8dc2126a4c0b474e9a7b8593cfd57
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -1,4 +1,5 @@
-TEST_MBOX_VPNOR_SRCS = common.c pnor_partition_table.cpp
+TEST_MBOX_VPNOR_SRCS = common.c pnor_partition_table.cpp \
+		       %reldir%/tmpd.cpp
 
 test_vpnor_create_pnor_partition_table_SOURCES = \
 	$(TEST_MBOX_VPNOR_SRCS) \
