test: vpnor: Extract write_prsv from write_flash_vpnor
Change-Id: I71641b2c67eebf0b2babd677a46dbc45e0848795
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -35,9 +35,20 @@ test_vpnor_write_flash_vpnor_SOURCES = \
 test_vpnor_write_flash_vpnor_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_write_flash_vpnor_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_write_prsv_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	mtd.c \
+	pnor_partition.cpp \
+	%reldir%/write_prsv.cpp
+test_vpnor_write_prsv_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_write_prsv_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
 	%reldir%/create_read_window_vpnor \
-	%reldir%/write_flash_vpnor
+	%reldir%/write_flash_vpnor \
+	%reldir%/write_prsv
 endif
