test: vpnor: Add toc_no_name
Change-Id: I30325d8dbee300fc93911a7e9e2650fc592a7055
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -65,6 +65,13 @@ test_vpnor_write_rw_SOURCES = \
 test_vpnor_write_rw_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_write_rw_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_no_name_SOURCES = \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_no_name.cpp
+test_vpnor_toc_no_name_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_no_name_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -72,5 +79,6 @@ check_PROGRAMS += \
 	%reldir%/write_prsv \
 	%reldir%/write_ro \
 	%reldir%/write_rw \
-	%reldir%/write_patch
+	%reldir%/write_patch \
+	%reldir%/toc_no_name
 endif
