test: vpnor: Add toc_start_gt_end
Change-Id: Iaac0e7783f1ceba0d009fcd4865861b0109639e4
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,6 +35,7 @@ mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 @CODE_COVERAGE_RULES@
 
 check_PROGRAMS =
+XFAIL_TESTS =
 
 include test/Makefile.am.include
 include test/vpnor/Makefile.am.include
