test: vpnor: Add toc_no_start
Change-Id: If712eac2e0f7b2c46e8bd473a5dc1c5b62c534b4
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -79,6 +79,13 @@ test_vpnor_toc_start_gt_end_SOURCES = \
 test_vpnor_toc_start_gt_end_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_start_gt_end_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_no_start_SOURCES = \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_no_start.cpp
+test_vpnor_toc_no_start_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_no_start_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -88,5 +95,6 @@ check_PROGRAMS += \
 	%reldir%/write_rw \
 	%reldir%/write_patch \
 	%reldir%/toc_no_name \
-	%reldir%/toc_start_gt_end
+	%reldir%/toc_start_gt_end \
+	%reldir%/toc_no_start
 endif
