test: vpnor: Add toc_no_end
Change-Id: I0122a2239df3ec7c83e2bf778d4d8df5a348d495
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -86,6 +86,13 @@ test_vpnor_toc_no_start_SOURCES = \
 test_vpnor_toc_no_start_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_no_start_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_no_end_SOURCES = \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_no_end.cpp
+test_vpnor_toc_no_end_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_no_end_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -96,5 +103,6 @@ check_PROGRAMS += \
 	%reldir%/write_patch \
 	%reldir%/toc_no_name \
 	%reldir%/toc_start_gt_end \
-	%reldir%/toc_no_start
+	%reldir%/toc_no_start \
+	%reldir%/toc_no_end
 endif
