test: vpnor: Add toc_no_version
Change-Id: I17e876fcb18b69d29bcc439e0f270760e015f246
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -93,6 +93,13 @@ test_vpnor_toc_no_end_SOURCES = \
 test_vpnor_toc_no_end_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_no_end_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_no_version_SOURCES = \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_no_version.cpp
+test_vpnor_toc_no_version_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_no_version_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -104,5 +111,6 @@ check_PROGRAMS += \
 	%reldir%/toc_no_name \
 	%reldir%/toc_start_gt_end \
 	%reldir%/toc_no_start \
-	%reldir%/toc_no_end
+	%reldir%/toc_no_end \
+	%reldir%/toc_no_version
 endif
