--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -107,6 +107,21 @@ test_vpnor_toc_flags_SOURCES = \
 test_vpnor_toc_flags_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_flags_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_overlap_SOURCES = \
+	$(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_overlap.cpp
+test_vpnor_toc_overlap_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_overlap_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -120,5 +135,8 @@ check_PROGRAMS += \
 	%reldir%/toc_no_start \
 	%reldir%/toc_no_end \
 	%reldir%/toc_no_version \
-	%reldir%/toc_flags
+	%reldir%/toc_flags \
+	%reldir%/toc_overlap
+
+XFAIL_TESTS += %reldir%/toc_overlap
 endif
