--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -137,6 +137,21 @@ test_vpnor_toc_lookup_found_SOURCES = \
 test_vpnor_toc_lookup_found_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_lookup_found_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_lookup_failed_SOURCES = \
+	$(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_lookup_failed.cpp
+test_vpnor_toc_lookup_failed_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_lookup_failed_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -152,5 +167,6 @@ check_PROGRAMS += \
 	%reldir%/toc_no_version \
 	%reldir%/toc_flags \
 	%reldir%/toc_overlap \
-	%reldir%/toc_lookup_found
+	%reldir%/toc_lookup_found \
+	%reldir%/toc_lookup_failed
 endif
