test: vpnor: Add toc_missing_file
Change-Id: I6fb96c921bead334ff178d0d78e9c7e7c7234f0a
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -152,6 +152,21 @@ test_vpnor_toc_lookup_failed_SOURCES = \
 test_vpnor_toc_lookup_failed_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_toc_lookup_failed_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_toc_missing_file_SOURCES = \
+	$(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	common.c \
+	pnor_partition_table.cpp \
+	%reldir%/toc_missing_file.cpp
+test_vpnor_toc_missing_file_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_toc_missing_file_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -168,5 +183,6 @@ check_PROGRAMS += \
 	%reldir%/toc_flags \
 	%reldir%/toc_overlap \
 	%reldir%/toc_lookup_found \
-	%reldir%/toc_lookup_failed
+	%reldir%/toc_lookup_failed \
+	%reldir%/toc_missing_file
 endif
