--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -180,6 +180,19 @@ test_vpnor_create_read_window_oob_SOURCES = \
 test_vpnor_create_read_window_oob_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_create_read_window_oob_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_create_read_window_toc_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	%reldir%/create_read_window_toc.cpp
+test_vpnor_create_read_window_toc_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_create_read_window_toc_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -198,7 +211,8 @@ check_PROGRAMS += \
 	%reldir%/toc_lookup_found \
 	%reldir%/toc_lookup_failed \
 	%reldir%/toc_missing_file \
-	%reldir%/create_read_window_oob
+	%reldir%/create_read_window_oob \
+	%reldir%/create_read_window_toc
 
 XFAIL_TESTS += %reldir%/create_read_window_oob
 endif
