--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -276,6 +276,19 @@ test_vpnor_create_read_window_size_SOURCES = \
 test_vpnor_create_read_window_size_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_create_read_window_size_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_create_read_window_remap_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	%reldir%/create_read_window_remap.cpp
+test_vpnor_create_read_window_remap_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_create_read_window_remap_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -301,7 +314,8 @@ check_PROGRAMS += \
 	%reldir%/read_patch \
 	%reldir%/write_patch_resize \
 	%reldir%/dump_flash \
-	%reldir%/create_read_window_size
+	%reldir%/create_read_window_size \
+	%reldir%/create_read_window_remap
 
 XFAIL_TESTS += %reldir%/dump_flash
 XFAIL_TESTS += %reldir%/create_read_window_size
