test: vpnor: Add create_read_window_size
Tests to make sure that the window size returned has not been shrunk
inappropriately by previous requests.

Change-Id: Ib86d0744c774b5cf57235833a402bc79ef9979b9
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -263,6 +263,19 @@ test_vpnor_dump_flash_SOURCES = \
 test_vpnor_dump_flash_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_dump_flash_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_create_read_window_size_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	%reldir%/create_read_window_size.cpp
+test_vpnor_create_read_window_size_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_create_read_window_size_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -287,7 +300,9 @@ check_PROGRAMS += \
 	%reldir%/create_read_window_partition_invalid \
 	%reldir%/read_patch \
 	%reldir%/write_patch_resize \
-	%reldir%/dump_flash
+	%reldir%/dump_flash \
+	%reldir%/create_read_window_size
 
 XFAIL_TESTS += %reldir%/dump_flash
+XFAIL_TESTS += %reldir%/create_read_window_size
 endif
