vpnor: Isolate relevant code in vpnor directory
This is prepatory work for introducing more vpnor-specific behaviours to
window handling. We will be introducing more objects to link, in order
to hook some of the window command handlers.

This change takes the opportunity to revert back to the upstream names
for some of the original C files.

Change-Id: I6b67ae466a2695054035e65ba752881be9c32d1a
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -7,19 +7,19 @@ test_sanity_SOURCES = %reldir%/sanity.c
 
 test_copy_flash_SOURCES = \
 	%reldir%/copy_flash.c \
-	mboxd_flash_physical.c \
+	mboxd_flash.c \
 	common.c mtd.c \
 	%reldir%/tmpf.c
 
 test_erase_flash_SOURCES = \
 	%reldir%/erase_flash.c \
-	mboxd_flash_physical.c \
+	mboxd_flash.c \
 	common.c \
 	%reldir%/tmpf.c
 
 test_write_flash_SOURCES = \
 	%reldir%/write_flash.c \
-	mboxd_flash_physical.c \
+	mboxd_flash.c \
 	common.c \
 	%reldir%/tmpf.c
 
@@ -27,9 +27,9 @@ TEST_MBOX_SRCS = \
 	mboxd_msg.c \
 	mboxd_windows.c \
 	mboxd_lpc.c \
-	mboxd_lpc_physical.c \
+	mboxd_lpc_reset.c \
 	common.c \
-	mboxd_flash_physical.c
+	mboxd_flash.c
 
 TEST_MOCK_SRCS = %reldir%/tmpf.c %reldir%/mbox.c %reldir%/system.c
 
