--- a/Makefile.am
+++ b/Makefile.am
@@ -13,19 +13,10 @@ mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
 if VIRTUAL_PNOR_ENABLED
-mboxd_SOURCES += pnor_partition_table.cpp \
-	mboxd_pnor_partition_table.cpp \
-	mboxd_flash_virtual.cpp \
-	pnor_partition.cpp \
-	mboxd_lpc_virtual.cpp
-
-mboxd_LDFLAGS += -lstdc++fs \
-	$(SDBUSPLUS_LIBS) \
-	$(PHOSPHOR_LOGGING_LIBS) \
-	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
+include vpnor/Makefile.am.include
 else
-mboxd_SOURCES += mboxd_flash_physical.c \
-	mboxd_lpc_physical.c
+mboxd_SOURCES += mboxd_flash.c \
+	mboxd_lpc_reset.c
 endif
 
 mboxctl_SOURCES = mboxctl.c
