test: Move vpnor tests to vpnor directory
In the spirit of things that are together should be kept together. The
repository layout now better corresponds to upstream with the exception
of the vpnor directory and some modifications to Makefile.am

Change-Id: I16d59a3c9ee846065f6a8c83eb4459715d525f3f
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ arm-openbmc-linux-gnueabi-libtool
 mboxctl
 /cscope.*
 /test/*.o
-/test/vpnor/*.o
+/vpnor/test/*.o
 
 # Autotools test infrastructure
 *.log
