--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -11,6 +11,7 @@ TEST_MBOX_VPNOR_INTEG_SRCS = \
 	vpnor/mboxd_lpc_reset.cpp \
 	vpnor/mboxd_pnor_partition_table.cpp \
 	vpnor/mboxd_flash.cpp \
+	vpnor/mboxd_msg.cpp \
 	vpnor/pnor_partition.cpp \
 	vpnor/pnor_partition_table.cpp \
 	%reldir%/tmpd.cpp
@@ -35,41 +36,29 @@ vpnor_test_create_read_window_partition_exists_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_create_read_window_partition_exists_LDADD = $(VPNOR_LDADD)
 
 vpnor_test_write_patch_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
+	$(TEST_MBOX_VPNOR_INTEG_SRCS) \
 	mtd.c \
-	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
-	vpnor/pnor_partition.cpp \
 	%reldir%/write_patch.cpp
 vpnor_test_write_patch_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_write_patch_LDADD = $(VPNOR_LDADD)
 
 vpnor_test_write_prsv_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
+	$(TEST_MBOX_VPNOR_INTEG_SRCS) \
 	mtd.c \
-	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
-	vpnor/pnor_partition.cpp \
 	%reldir%/write_prsv.cpp
 vpnor_test_write_prsv_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_write_prsv_LDADD = $(VPNOR_LDADD)
 
 vpnor_test_write_ro_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
+	$(TEST_MBOX_VPNOR_INTEG_SRCS) \
 	mtd.c \
-	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
-	vpnor/pnor_partition.cpp \
 	%reldir%/write_ro.cpp
 vpnor_test_write_ro_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_write_ro_LDADD = $(VPNOR_LDADD)
 
 vpnor_test_write_rw_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
+	$(TEST_MBOX_VPNOR_INTEG_SRCS) \
 	mtd.c \
-	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
-	vpnor/pnor_partition.cpp \
 	%reldir%/write_rw.cpp
 vpnor_test_write_rw_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_write_rw_LDADD = $(VPNOR_LDADD)
@@ -180,11 +169,8 @@ vpnor_test_read_patch_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_read_patch_LDADD = $(VPNOR_LDADD)
 
 vpnor_test_write_patch_resize_SOURCES = \
-	$(TEST_MBOX_VPNOR_SRCS) \
+	$(TEST_MBOX_VPNOR_INTEG_SRCS) \
 	mtd.c \
-	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
-	vpnor/pnor_partition.cpp \
 	%reldir%/write_patch_resize.cpp
 vpnor_test_write_patch_resize_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 vpnor_test_write_patch_resize_LDADD = $(VPNOR_LDADD)
