--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -302,6 +302,19 @@ test_vpnor_create_write_window_ro_partition_SOURCES = \
 test_vpnor_create_write_window_ro_partition_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_create_write_window_ro_partition_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_create_write_window_rw_partition_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	%reldir%/create_write_window_rw_partition.cpp
+test_vpnor_create_write_window_rw_partition_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_create_write_window_rw_partition_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -329,7 +342,8 @@ check_PROGRAMS += \
 	%reldir%/dump_flash \
 	%reldir%/create_read_window_size \
 	%reldir%/create_read_window_remap \
-	%reldir%/create_write_window_ro_partition
+	%reldir%/create_write_window_ro_partition \
+	%reldir%/create_write_window_rw_partition
 
 XFAIL_TESTS += %reldir%/create_write_window_ro_partition
 endif
