test: vpnor: Add create_write_window_unmapped
Deny attempts to open write windows to flash space that is unmapped in
the ToC. This gives explicit feedback that any data written would not be
persisted if it were possible create the write window in the first
place.

Change-Id: I0e7967247b122aa8d0c1de38af43162ba0ccc8fa
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/vpnor/Makefile.am.include
+++ b/test/vpnor/Makefile.am.include
@@ -315,6 +315,19 @@ test_vpnor_create_write_window_rw_partition_SOURCES = \
 test_vpnor_create_write_window_rw_partition_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
 test_vpnor_create_write_window_rw_partition_LDADD = $(VPNOR_LDADD)
 
+test_vpnor_create_write_window_unmapped_SOURCES = \
+	$(TEST_MBOX_VPNOR_SRCS) $(TEST_MOCK_SRCS) \
+	mboxd_msg.c \
+	mboxd_windows.c \
+	mboxd_lpc.c \
+	mboxd_lpc_virtual.cpp \
+	mboxd_pnor_partition_table.cpp \
+	mboxd_flash_virtual.cpp \
+	pnor_partition.cpp \
+	%reldir%/create_write_window_unmapped.cpp
+test_vpnor_create_write_window_unmapped_LDFLAGS = $(OESDK_TESTCASE_FLAGS)
+test_vpnor_create_write_window_unmapped_LDADD = $(VPNOR_LDADD)
+
 if VIRTUAL_PNOR_ENABLED
 check_PROGRAMS += \
 	%reldir%/create_pnor_partition_table \
@@ -343,7 +356,9 @@ check_PROGRAMS += \
 	%reldir%/create_read_window_size \
 	%reldir%/create_read_window_remap \
 	%reldir%/create_write_window_ro_partition \
-	%reldir%/create_write_window_rw_partition
+	%reldir%/create_write_window_rw_partition \
+	%reldir%/create_write_window_unmapped
 
 XFAIL_TESTS += %reldir%/create_write_window_ro_partition
+XFAIL_TESTS += %reldir%/create_write_window_unmapped
 endif
