Modify access rules

--- a/project.config
+++ b/project.config
@@ -18,4 +18,4 @@
 [access "refs/tags/*"]
 	createSignedTag = group github/openbmc/phosphor-mboxd-maintainers
 	createTag = group github/openbmc/phosphor-mboxd-maintainers
-	push = group github/openbmc/phosphor-mboxd-maintainers
+	push = +force group github/openbmc/phosphor-mboxd-maintainers
