configure: Don't enable the virtual PNOR by default
To date, most systems are not configured with the virtual PNOR feature.
Turn it off by default, so only systems that want it enable it.

See vpnor/README.md to understand whether this is a feature you want for
your system design.

Change-Id: I33f57946444db92a72851c9ce24df6121860b742
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/configure.ac
+++ b/configure.ac
@@ -58,14 +58,14 @@ AS_IF([test "x$enable_oe_sdk" == "xyes"],
 AC_ARG_ENABLE([virtual-pnor],
     AS_HELP_STRING([--enable-virtual-pnor], [Turn on virtual pnor])
 )
-AS_IF([test "x$enable_virtual_pnor" == "xno"],
-    [
-        AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, false)
-    ],
+AS_IF([test "x$enable_virtual_pnor" == "xyes"],
     [
         AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, true)
         AX_APPEND_COMPILE_FLAGS([-DVIRTUAL_PNOR_ENABLED], [CXXFLAGS])
         AX_APPEND_COMPILE_FLAGS([-DVIRTUAL_PNOR_ENABLED], [CFLAGS])
+    ],
+    [
+        AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, false)
     ]
 )
 
