make: Improve cscope database quality
At least automake-1.15 doesn't unique-ify over all files listed in all
_SOURCES variables, which means we wind up with a database full of
duplicate symbols.

Improve this by hacking up the cscope.files target to sort/unique the
file list before generating the database.

Change-Id: I1cc84e35ca6b5160c7c46d8d579547ec3d9b4497
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,3 +37,8 @@ include test/Makefile.am.include
 include vpnor/test/Makefile.am.include
 
 TESTS = $(check_PROGRAMS)
+
+cscope.files: clean-cscope cscopelist-unique
+
+cscopelist-unique: cscopelist
+	sort -u cscope.files > cscope.files.u && mv cscope.files.u cscope.files
