dbus: Mark current command set as legacy
Change-Id: I1b5d1c9262ea6ae0a9ff77c902b6941943085cd1
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@ sbin_PROGRAMS = mboxd mboxctl
 mboxd_SOURCES = \
 	mboxd.c \
 	common.c \
+	control.c \
+	control_legacy.c \
 	mboxd_dbus.c \
 	mboxd_lpc.c \
 	mboxd_msg.c \
