dbus: Use new bus name, object and interface
The new interface is a more typical use of DBus, exposing multiple
methods for the functions that are available on the object. The legacy
interface by comparison exposed only one method whose arguments selected
sub-commands to be executed. The legacy approach is not terribly
discoverable and leads to a lack of clarity in the client code. The
legacy approach also obscured the implementation with its use of `struct
mbox_dbus_msg`. The new interface wraps around the existing helpers and
so also deals with `struct mbox_dbus_msg`, but this can at least be
removed in the future.

Change-Id: I7113ed8fd2324bf3fb049d8d20acb3fd7fba6de3
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ mboxd_SOURCES = \
 	control.c \
 	control_legacy.c \
 	mboxd_dbus.c \
+	control_dbus.c \
 	mboxd_lpc.c \
 	mboxd_msg.c \
 	mboxd_windows.c \
