--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -24,7 +24,8 @@ TEST_MBOX_SRCS = \
 	lpc.c \
 	lpc_reset.c \
 	common.c \
-	flash.c
+	flash.c \
+	protocol.c
 
 TEST_MOCK_SRCS = %reldir%/tmpf.c %reldir%/mbox.c %reldir%/system.c
 
