mboxd: Rename flash files
Change-Id: Icfe9d61775a198c5a0f8227bf5d6c4b7f11aeec3
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@ mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 if VIRTUAL_PNOR_ENABLED
 include vpnor/Makefile.am.include
 else
-mboxd_SOURCES += mboxd_flash.c \
+mboxd_SOURCES += flash.c \
 	mboxd_lpc_reset.c
 endif
 
