--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -2,19 +2,19 @@ test_sanity_SOURCES = %reldir%/sanity.c
 
 test_copy_flash_SOURCES = \
 	%reldir%/copy_flash.c \
-	mboxd_flash.c \
+	flash.c \
 	common.c mtd.c \
 	%reldir%/tmpf.c
 
 test_erase_flash_SOURCES = \
 	%reldir%/erase_flash.c \
-	mboxd_flash.c \
+	flash.c \
 	common.c \
 	%reldir%/tmpf.c
 
 test_write_flash_SOURCES = \
 	%reldir%/write_flash.c \
-	mboxd_flash.c \
+	flash.c \
 	common.c \
 	%reldir%/tmpf.c
 
@@ -24,7 +24,7 @@ TEST_MBOX_SRCS = \
 	mboxd_lpc.c \
 	mboxd_lpc_reset.c \
 	common.c \
-	mboxd_flash.c
+	flash.c
 
 TEST_MOCK_SRCS = %reldir%/tmpf.c %reldir%/mbox.c %reldir%/system.c
 
