--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -10,7 +10,7 @@ TEST_MBOX_VPNOR_INTEG_SRCS = \
 	mboxd_lpc.c \
 	vpnor/mboxd_lpc_reset.cpp \
 	vpnor/mboxd_pnor_partition_table.cpp \
-	vpnor/mboxd_flash.cpp \
+	vpnor/flash.cpp \
 	vpnor/mboxd_msg.cpp \
 	vpnor/pnor_partition.cpp \
 	vpnor/pnor_partition_table.cpp \
