--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -7,8 +7,8 @@ TEST_MBOX_VPNOR_INTEG_SRCS = \
 	common.c \
 	mboxd_msg.c \
 	mboxd_windows.c \
-	mboxd_lpc.c \
-	vpnor/mboxd_lpc_reset.cpp \
+	lpc.c \
+	vpnor/lpc_reset.cpp \
 	vpnor/mboxd_pnor_partition_table.cpp \
 	vpnor/flash.cpp \
 	vpnor/mboxd_msg.cpp \
