mboxd: Rename windows files
Change-Id: I44e110906fd0f751f8f34b175f971e65896a7301
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -6,7 +6,7 @@ TEST_MBOX_VPNOR_SRCS = \
 TEST_MBOX_VPNOR_INTEG_SRCS = \
 	common.c \
 	mboxd_msg.c \
-	mboxd_windows.c \
+	windows.c \
 	lpc.c \
 	vpnor/lpc_reset.cpp \
 	vpnor/mboxd_pnor_partition_table.cpp \
