--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -20,7 +20,7 @@ test_flash_write_SOURCES = \
 
 TEST_MBOX_SRCS = \
 	mboxd_msg.c \
-	mboxd_windows.c \
+	windows.c \
 	lpc.c \
 	lpc_reset.c \
 	common.c \
