mboxd: Rename mboxd_msg to transport_mbox
Change-Id: I0f4e206648c02a98fa938a7e582470c8d90904f1
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -19,7 +19,7 @@ test_flash_write_SOURCES = \
 	%reldir%/tmpf.c
 
 TEST_MBOX_SRCS = \
-	mboxd_msg.c \
+	transport_mbox.c \
 	windows.c \
 	lpc.c \
 	lpc_reset.c \
