--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -25,7 +25,8 @@ TEST_MBOX_SRCS = \
 	lpc_reset.c \
 	common.c \
 	flash.c \
-	protocol.c
+	protocol.c \
+	protocol_negotiate_version.c
 
 TEST_MOCK_SRCS = %reldir%/tmpf.c %reldir%/mbox.c %reldir%/system.c
 
