flash: Rename erase_flash to flash_erase
Change-Id: I417319aadb2fdbfa2d688bb26b5515d2f9265994
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -6,8 +6,8 @@ test_flash_copy_SOURCES = \
 	common.c mtd.c \
 	%reldir%/tmpf.c
 
-test_erase_flash_SOURCES = \
-	%reldir%/erase_flash.c \
+test_flash_erase_SOURCES = \
+	%reldir%/flash_erase.c \
 	flash.c \
 	common.c \
 	%reldir%/tmpf.c
@@ -100,7 +100,7 @@ test_get_mbox_info_v2_timeout_SOURCES = %reldir%/get_mbox_info_v2_timeout.c \
 check_PROGRAMS += \
 		%reldir%/sanity \
 		%reldir%/flash_copy \
-		%reldir%/erase_flash \
+		%reldir%/flash_erase \
 		%reldir%/write_flash \
 		%reldir%/get_mbox_info_v2 \
 		%reldir%/reset_state \
